Fix overflow from the word "Bouldering" being too long

--- a/sass/sections/_notice-board.scss
+++ b/sass/sections/_notice-board.scss
@@ -73,3 +73,13 @@
       
     }
   }
+
+  @media screen and (max-width: $bp-medium) {
+    .notice-board {
+      .message {
+        h3{
+          font-size: 2rem;
+        }
+      }
+    }
+  }
